EEVEE camera motion blur renders only one viewport sample #58610

Closed
opened 2018-12-03 13:19:28 +01:00 by Christoph Werner · 12 comments

System Information
Operating system: Windows 10 Pro, 64 Bit
Graphics card: GeForce GTX 1080 Ti

Blender Version
Broken: Date 2018-12-03 00:27, Hash: a205493426, Branch: blender2.8

Short description of error
Eevee mode: When using rendered "camera view" in the viewport, it will always be rendered using 1 render sample only. The camera view ignores the global Viewport Samples settings.

If you exit the camera view and switch to the regular user perspektive view, then the global Viewport Samples are correct and the view renders as expected.

Why the camera view is ignoring the global viewport sample settings?

Exact steps for others to reproduce the error
See my attached image,please.

EDIT: The bug appear when "Motion Blur" is activated in Eevee render settings.

blender_eevee_renderbug01.JPG

bug_prototyping01_eevee.blend

**System Information** Operating system: Windows 10 Pro, 64 Bit Graphics card: GeForce GTX 1080 Ti **Blender Version** Broken: Date 2018-12-03 00:27, Hash: a205493426b, Branch: blender2.8 **Short description of error** **Eevee mode:** When using rendered "camera view" in the viewport, it will always be rendered using 1 render sample only. The camera view ignores the global Viewport Samples settings. If you exit the camera view and switch to the regular user perspektive view, then the global Viewport Samples are correct and the view renders as expected. Why the camera view is ignoring the global viewport sample settings? **Exact steps for others to reproduce the error** See my attached image,please. EDIT: The bug appear when "Motion Blur" is activated in Eevee render settings. ![blender_eevee_renderbug01.JPG](https://archive.blender.org/developer/F5800035/blender_eevee_renderbug01.JPG) [bug_prototyping01_eevee.blend](https://archive.blender.org/developer/F5800530/bug_prototyping01_eevee.blend)

Added subscriber: @ChristophWerner

Added subscriber: @ChristophWerner

#60612 was marked as duplicate of this issue

#60612 was marked as duplicate of this issue

#60362 was marked as duplicate of this issue

#60362 was marked as duplicate of this issue
Christoph Werner changed title from Camera view in viewport is rendered always with 1 render sample only to Camera view ignores global eevee "Viewport Samples" settings 2018-12-03 13:20:33 +01:00
Christoph Werner changed title from Camera view ignores global eevee "Viewport Samples" settings to Camera view ignores global Eevee "Viewport Samples" settings 2018-12-03 13:20:48 +01:00

Added subscriber: @brecht

Added subscriber: @brecht

Please attach a simple .blend file to reproduce the issue.

Please attach a simple .blend file to reproduce the issue.

Added subscriber: @sozap

Added subscriber: @sozap

this is happening when using camera motion blur, I don't know if it's a bug or it's behaving as intended...

this is happening when using camera motion blur, I don't know if it's a bug or it's behaving as intended...

In #58610#566699, @sozap wrote:
this is happening when using camera motion blur, I don't know if it's a bug or it's behaving as intended...

Conformed. Activation Motion Blur in the render settings is really the reason. Thank you for the hint. Seem to be an error.

@brecht I've attached the file to reproduce it. Please switch to "Rendered mode" in Eevee in both viewports, to see the difference. As @sozap mentioned: It happen when Motion Blur is enabled in Eevee the render settings. You can see the difference if you swap between Motion Blur on and off.

> In #58610#566699, @sozap wrote: > this is happening when using camera motion blur, I don't know if it's a bug or it's behaving as intended... Conformed. Activation Motion Blur in the render settings is really the reason. Thank you for the hint. Seem to be an error. @brecht I've attached the file to reproduce it. Please switch to "Rendered mode" in Eevee in both viewports, to see the difference. As @sozap mentioned: It happen when Motion Blur is **enabled** in Eevee the render settings. You can see the difference if you swap between Motion Blur on and off.
Clément Foucault was assigned by Brecht Van Lommel 2018-12-03 14:48:37 +01:00
Brecht Van Lommel changed title from Camera view ignores global Eevee "Viewport Samples" settings to EEVEE camera motion blur renders only one viewport sample 2018-12-03 14:49:45 +01:00

This issue was referenced by f7d415ab42

This issue was referenced by f7d415ab42c3203d370b62d6ed99e7a894030a33

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscribers: @TravLR, @fclem, @JacquesLucke

Added subscribers: @TravLR, @fclem, @JacquesLucke

Added subscriber: @Lattapotta

Added subscriber: @Lattapotta
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#58610
No description provided.