source/blender/draw/engines/eevee/eevee_private.h
@@ -563,9 +563,11 @@ typedef struct EEVEE_EffectsInfo {
 	struct GPUTexture *gtao_horizons; /* Textures from pool */
 	struct GPUTexture *gtao_horizons_debug;
 	/* Motion Blur */
+	float current_world_to_ndc[4][4];
 	float current_ndc_to_world[4][4];
 	float past_world_to_ndc[4][4];
 	int motion_blur_samples;
+	bool motion_blur_mat_cached;
 	/* Velocity Pass */
 	float velocity_curr_persinv[4][4];
 	float velocity_past_persmat[4][4];
